2007-05-31  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.2

	* iTunesFileSystem.m: inform NSWorkspace about directory changes
	  (doesn't seem to have the desired effect on my system, though).

	* NSURL+Extensions.[hm]: new category for properly demangling
	  "?" characters in file URLs to "_", as this is what iTunes seems to
	  do

	* iTunesLibrary.m: if library contains only one playlist (i.e. Shuffle)
	  skip the playlist in listing and instead show all tracks.

	* iPodLibrary.m: extract "dateModified" and "dateAdded" from iTunesDB
	  and put it into representation dictionary for iTunesTrack to
	  initialize with

	* iTunesTrack.[hm]: Derive FileSystemAttributes from attributes stored
	  in either iTunes or iTunesDB representation. Properly demangle
	  file URL paths before accessing data in hose file system.

	* iTunesFileSystem.m, iTunesLibrary.m, iTunesPlaylist.m, iTunesTrack.m:
	  added custom -description to aid in debugging

2007-05-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.1

	* NOTES: added some Spotlight info

	* README: updated

	* NSObject+Extensions.[hm]: new iTunesFS lookup methods which
	  dramatically simplify the implementation

	* iTunesFileSystem.m: added new "iTunesFileSystemDebugEnabled" and
	  "NoIPods" defaults (described in README). Added some debug output,
	  when iTunesFileSystemDebugEnabled == YES. All paths will be mangled
	  now before they are being processed - using the "NoIPods" default
	  this leads to the whole "libraries" hierarchy to be hidden, as it's
	  not useful to display it then.
	  Implemented new lookup algorithm for looking up "generic" objects
	  for performing all file system related operations on. Call -close
	  on libraries whose mount points are about to vanish.

	* iTunesTrack.[hm]: minor renaming, implemented file system operations
	  as part of the new lookup API

	* iTunesPlaylist.m: implemented lookup API

	* iTunesLibrary.[hm]: removed quite a bit of the old API, implemented